Workaround for a warning from asciidoctor.